--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,10 @@
 @import url('base.css');
+.hh_skills{
+	text-align: justify;
+}
+.service-item>h4{
+	text-transform: uppercase;
+} 
 .about{
 	width: 100%;
 	height: auto;
@@ -392,11 +398,16 @@
 }
 .zhezhao>h1{
 	font-size: 80px;
+	height:80px;
     color: #fff;
     text-transform: uppercase;
-    text-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
-    margin-bottom: 10px;
-	margin-top: 250px;
+	text-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+	position: absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	margin:auto;
 }
 .social{
 	display: block;
@@ -630,12 +641,12 @@ header{
 
 /* 响应式begin */
 @media screen and (max-width: 768px){
+	.zhezhao>h1{
+		font-size: 40px;
+		height:40px;
+	}
 	.intro-section{
 		height: 300px;
-	}
-	.zhezhao>h1{
-		font-size: 20px;
-		margin-top: 50px;
 	}
 	.about_photo>img{
 		margin-bottom: 30px;
@@ -683,12 +694,12 @@ header{
 }
 /* 适配ipad，768px<阈值<992px container:750px col-sm-*/
 @media screen and (min-width: 768px) and (max-width: 992px){	
+	.zhezhao>h1{
+		font-size: 50px;
+		height:50px;
+	}
 	.intro-section{
 		height: 400px;
-	}
-	.zhezhao>h1{
-		font-size: 40px;
-		margin-top: 100px;
 	}
 	.about_photo>img{
 		margin-bottom: 30px;
@@ -743,7 +754,7 @@ header{
 	}
 	.zhezhao>h1{
 		font-size: 60px;
-		margin-top: 200px;
+		height:60px;
 	}
 	.portfolio_container{
 		height: 697px;
